--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -60,6 +60,7 @@ The Dr. Memory distribution contains the following:
 
 The current version is \TOOL_VERSION.
 The changes between \TOOL_VERSION and version 1.6.0 include:
+ - Added Windows 8.1 support
  - Added -handle_leaks_only feature for low-overhead handle leak checking
  - Added the -crash_at_unaddressable and -crash_at_error options
 
@@ -284,7 +285,7 @@ some bugs.  The missing features include:
 
  - Windows system call parameters are not all known, which can
    result in false positives and false negatives, especially on Vista or
-   Windows 7 or Windows 8, or with code that interacts with the network.
+   Windows 7+, or with code that interacts with the network.
    Often, these false positives are solely in system library code.
    Dr. Memory attempts to separate such errors into potential_errors.txt.
  - The malloc in the Cygwin C library is not yet tracked separately from
