i#703 callstack quality improvements:
Add two new options, -no_callstack_use_fp and -callstack_conservative, for
improving callstack quality with mixed FPO and unoptimized code.

-no_callstack_use_fp does not follow frame pointer chains and always scans.

-callstack_conservative checks that each retaddr follows a call that
targets the prior callstack frame.

Needless to say, these add overhead, so they are not on by default,
although -no_callstack_use_fp's overhead is small enough that if we feel
comfortable with it we could turn it on by default.

SVN-Revision: 1642

--- a/drmemory/docs/release.dox
+++ b/drmemory/docs/release.dox
@@ -63,6 +63,7 @@ The changes between \TOOL_VERSION and version 1.6.0 include:
  - Added Windows 8.1 support
  - Added -handle_leaks_only feature for low-overhead handle leak checking
  - Added the -crash_at_unaddressable and -crash_at_error options
+ - Added the -no_callstack_use_fp and -callstack_conservative options
 
 The changes between version 1.6.0 and version 1.5.1 include:
  - Added a separate category of error report, "potential errors", stored in
