--- a/drsyscall/drsyscall.dox
+++ b/drsyscall/drsyscall.dox
@@ -1,5 +1,5 @@
 /* **********************************************************
- * Copyright (c) 2012 Google, Inc.   All rights reserved.
+ * Copyright (c) 2012-2013 Google, Inc.   All rights reserved.
  * **********************************************************/
 
 /*
@@ -47,12 +47,20 @@ part of the Dr. Memory Framework.
 
 To use \p drsyscall with your client, first locate the Dr. Memory
 Framework.  Then use the standard method of using an Extension with the
-name \p drmf_drsyscall.  The two steps will look like this in your client's
+name \p drsyscall.  The two steps will look like this in your client's
 \p CMakeLists.txt file:
 
 \code
 find_package(DrMemoryFramework)
-use_DynamoRIO_extension(clientname drmf_drsyscall)
+use_DynamoRIO_extension(clientname drsyscall)
+\endcode
+
+To point CMake at the framework, set the DrMemoryFramework_DIR variable to
+point at the \p drmf subdirectory of the Dr. Memory package that you are
+using.  For example:
+
+\code
+cmake -G"Ninja" -DDynamoRIO_DIR=c:/path/to/DynamoRIO-Windows-4.1.0-8/cmake -DDrMemoryFramework_DIR=c:/path/to/DrMemory-Windows-1.6.0-2/drmf ../mysrcs/
 \endcode
 
 That will automatically set up the include path and library dependence.
