--- a/README
+++ b/README
@@ -1,5 +1,5 @@
 # **********************************************************
-# Copyright (c) 2010-2012 Google, Inc.  All rights reserved.
+# Copyright (c) 2010-2013 Google, Inc.  All rights reserved.
 # Copyright (c) 2008-2009 VMware, Inc.  All rights reserved.
 # **********************************************************
 
@@ -35,6 +35,9 @@ Windows).
 
 Dr. Memory is based on the DynamoRIO binary translation engine.  Dr. Memory
 currently targets 32-bit Windows and Linux.  64-bit is coming soon.
+
+Dr. Memory also includes a system call tracing tool for Windows and a
+symbol query utility.
 
 ===========================================================================
 How do I use Dr. Memory?
